--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,5 +26,7 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.8"
-  }
+  },
+  "author": "Real-Time Translation App",
+  "license": "UNLICENSED"
 }
