--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "realtime-translation-frontend",
+  "name": "echotranslate-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -27,6 +27,6 @@
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.8"
   },
-  "author": "Real-Time Translation App",
+  "author": "EchoTranslate",
   "license": "UNLICENSED"
 }
