--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
-# EchoTranslate - Nginx Configuration for EC2
-# Place this at: /etc/nginx/sites-available/echotranslate
-# Then run: sudo ln -s /etc/nginx/sites-available/echotranslate /etc/nginx/sites-enabled/
+# EchoTranslate - Nginx Production Configuration
+# Production setup for app.exbabel.com with Let's Encrypt SSL
+# Place this at: /etc/nginx/conf.d/echotranslate.conf
 
 # WebSocket upgrade headers
 map $http_upgrade $connection_upgrade {
@@ -8,12 +8,37 @@ map $http_upgrade $connection_upgrade {
     '' close;
 }
 
+# HTTP -> HTTPS redirect
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
+    listen 80;
+    listen [::]:80;
+    server_name app.exbabel.com;
     
-    # Replace with your domain or use _ for any hostname
-    server_name _;
+    return 301 https://$server_name$request_uri;
+}
+
+# HTTPS server
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name app.exbabel.com;
+
+    # Let's Encrypt SSL certificates
+    ssl_certificate /etc/letsencrypt/live/app.exbabel.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/app.exbabel.com/privkey.pem;
+    
+    # SSL settings (modern, secure)
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
+    # Security headers
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
 
     # Increase timeouts for WebSocket connections
     proxy_connect_timeout 3600s;
@@ -21,13 +46,59 @@ server {
     proxy_read_timeout 3600s;
     send_timeout 3600s;
 
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
+    # Root directory for frontend static files
+    root /home/ec2-user/exbabel/frontend/dist;
+    index index.html;
 
-    # Proxy to Node.js backend
-    location / {
+    # Serve static files (frontend assets)
+    location /assets/ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    location /audio-stream-processor.js {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # API endpoints - proxy to Node.js backend
+    location /health {
+        proxy_pass http://localhost:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        access_log off;
+    }
+
+    location /session/ {
+        proxy_pass http://localhost:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /sessions {
+        proxy_pass http://localhost:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /test-translation {
+        proxy_pass http://localhost:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # WebSocket endpoint
+    location /translate {
         proxy_pass http://localhost:3001;
         proxy_http_version 1.1;
         
@@ -35,48 +106,23 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
         
-        # Standard proxy headers
+        # Standard headers
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # WebSocket specific settings
+        # WebSocket settings
         proxy_buffering off;
         proxy_cache off;
         proxy_redirect off;
     }
 
-    # Health check endpoint (no buffering for quick response)
-    location /health {
-        proxy_pass http://localhost:3001/health;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        access_log off;
+    # Frontend SPA - serve index.html for all other routes
+    location / {
+        try_files $uri $uri/ /index.html;
+        expires -1;
+        add_header Cache-Control "no-store, no-cache, must-revalidate";
     }
 }
-
-# HTTPS configuration (after setting up SSL with Let's Encrypt)
-# Uncomment this section after running: sudo certbot --nginx -d yourdomain.com
-#
-# server {
-#     listen 443 ssl http2;
-#     listen [::]:443 ssl http2;
-#     server_name yourdomain.com www.yourdomain.com;
-#
-#     # SSL certificates (managed by Certbot)
-#     ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
-#     
-#     # SSL settings
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers HIGH:!aNULL:!MD5;
-#     ssl_prefer_server_ciphers on;
-#     
-#     # Same location blocks as above
-#     location / {
-#         proxy_pass http://localhost:3001;
-#         # ... (same proxy settings)
-#     }
-# }
 
