--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 # EchoTranslate - Nginx Production Configuration
-# Production setup for app.exbabel.com with Let's Encrypt SSL
+# Backend API server for api.exbabel.com with Let's Encrypt SSL
 # Place this at: /etc/nginx/conf.d/echotranslate.conf
 
 # WebSocket upgrade headers
@@ -12,20 +12,20 @@ map $http_upgrade $connection_upgrade {
 server {
     listen 80;
     listen [::]:80;
-    server_name app.exbabel.com;
+    server_name api.exbabel.com;
     
     return 301 https://$server_name$request_uri;
 }
 
-# HTTPS server
+# HTTPS server - BACKEND API ONLY
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name app.exbabel.com;
+    server_name api.exbabel.com;
 
-    # Let's Encrypt SSL certificates
-    ssl_certificate /etc/letsencrypt/live/app.exbabel.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/app.exbabel.com/privkey.pem;
+    # Let's Encrypt SSL certificate
+    ssl_certificate /etc/letsencrypt/live/api.exbabel.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.exbabel.com/privkey.pem;
     
     # SSL settings (modern, secure)
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -40,65 +40,14 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    # Increase timeouts for WebSocket connections
+    # WebSocket timeouts
     proxy_connect_timeout 3600s;
     proxy_send_timeout 3600s;
     proxy_read_timeout 3600s;
     send_timeout 3600s;
 
-    # Root directory for frontend static files
-    root /home/ec2-user/exbabel/frontend/dist;
-    index index.html;
-
-    # Serve static files (frontend assets)
-    location /assets/ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-
-    location /audio-stream-processor.js {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-
-    # API endpoints - proxy to Node.js backend
-    location /health {
-        proxy_pass http://localhost:3001;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        access_log off;
-    }
-
-    location /session/ {
-        proxy_pass http://localhost:3001;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location /sessions {
-        proxy_pass http://localhost:3001;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location /test-translation {
-        proxy_pass http://localhost:3001;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # WebSocket endpoint
-    location /translate {
+    # Proxy ALL requests to Node.js backend (API + WebSocket)
+    location / {
         proxy_pass http://localhost:3001;
         proxy_http_version 1.1;
         
@@ -116,13 +65,6 @@ server {
         proxy_buffering off;
         proxy_cache off;
         proxy_redirect off;
-    }
-
-    # Frontend SPA - serve index.html for all other routes
-    location / {
-        try_files $uri $uri/ /index.html;
-        expires -1;
-        add_header Cache-Control "no-store, no-cache, must-revalidate";
     }
 }
 
