--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
-# EchoTranslate - Nginx Production Configuration
+# Exbabel - Nginx Production Configuration
 # Backend API server for api.exbabel.com with Let's Encrypt SSL
-# Place this at: /etc/nginx/conf.d/echotranslate.conf
+# Place this at: /etc/nginx/conf.d/exbabel.conf
 
 # WebSocket upgrade headers
 map $http_upgrade $connection_upgrade {
