--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^8.2.2",
     "eslint": "^9.38.0",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^16.4.0"
   },
   "keywords": [
