--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -8,6 +8,7 @@
     "plugin:react/recommended",
     "plugin:react-hooks/recommended"
   ],
+  "ignorePatterns": ["dist", "node_modules", "*.config.js"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
