--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -25,6 +25,19 @@
     "react": {
       "version": "detect"
     }
-  }
+  },
+  "ignorePatterns": [
+    "dist",
+    "node_modules",
+    "public",
+    "index.html",
+    "package-lock.json",
+    "*.config.js",
+    "*.config.mjs",
+    "postcss.config.js",
+    "tailwind.config.js",
+    "vite.config.js",
+    "*.css"
+  ]
 }
 
